--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -3,6 +3,9 @@
   <div class="row">
     <div class="col-md-6">
       <h2>Add Task</h2>
+      <div *ngIf="showAlert" class="alert alert-danger" role="alert">
+        Please enter Task Name and Description.
+      </div>
       <form>
         <div class="form-group">
           <label for="taskName">Task Name</label>
@@ -23,7 +26,7 @@
             [(ngModel)]="description"
           ></textarea>
         </div>
-        <button type="button" class="btn btn-primary" (click)="addTask()">Add</button>
+        <button type="button" class="btn btn-primary" (click)="createTask()">Add</button>
       </form>
     </div>
   </div>
