--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -5,7 +5,7 @@
       <h2>Task List</h2>
       <ul class="list-group">
         <li
-          *ngFor="let task of taskService.tasks; let i = index"
+          *ngFor="let task of tasks; let i = index"
           class="list-group-item d-flex justify-content-between align-items-center"
           [class.active]="selectedTaskIndex === i"
         >
